<resources>
    <string name="app_name">loyApp</string>
    <string name="txtAddCheck">Add Check</string>
    <string name="txtAddPonto">Add Ponto</string>
    <string name="txtEmail">Email</string>
    <string name="txtCheck">Check</string>
    <string name="txtCad">Cadastrar</string>
    <string name="txtNome">Nome</string>
    <string name="txtCPF">CPF</string>
    <string name="txtPontos">Pontos</string>
    <string name="txtCriar">Criar</string>
    <string name="txtNumChecks">Número de Checks</string>
    <string name="txtPremio">Prêmio</string>
    <string name="txtConsulta">Consulta</string>
    <string name="txtVoltar">Voltar</string>
    <string name="txtAddPontos">Adicionar Pontos</string>
</resources>
