<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.damasceno.hackthon_cielo.ConsultaActivity"
    android:gravity="center">

    <EditText
        android:id="@+id/edtCartaoChecks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtNumChecks"/>

    <EditText
        android:id="@+id/edtCartaoPremio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtPremio"
        android:layout_below="@+id/edtCartaoChecks"/>

    <Button
        android:id="@+id/btnAddCartao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtCriar"
        android:layout_below="@+id/edtCartaoPremio" />
</RelativeLayout>